# recall-pipeline

./: .gitattributes  .gitignore  .mcp.json  .sops.yaml  AGENTS.md  Agent.md  CLAUDE.md  Gemini.md  README.md  age.agekey  debug_import.py  justfile  output.txt  pyproject.toml  python_error.txt  requirements.txt  secrets.json  temp_db_url.txt  test_output.txt  todo.md
.beads/: config.yaml  issues.jsonl
.claude/: WORK_COMPLETED.md  settings.json
.claude/commands/: session-log.md
.claude/hooks/: evening-context.sh  session-end.sh  session-start.sh
.claude/scripts/: beads-prime.sh  session-end-log.sh
.claude/skills/: analyze-context.md  good-night-extended.md  good-night.md  implement.md  morning.md  next-task.md
.github/: copilot-instructions.md
.github/reverts/: revert-pr-5.md
.github/scripts/review/: code-review-agent.sh  report-aggregator.sh  security-scan.sh
.github/workflows/: ci.yml  pr-review.yml
agents/: __init__.py  __main__.py  config.py  constants.py  embeddings.py  errors.py  interface.py  log.py  memory.py  sdk.py  settings.py  utc.py  utils.py  verify_db.py
agents/agent/: __init__.py  agent.py  agent_configs.py  agent_wrapper.py  background_agent.py  core_memory_agent.py  episodic_memory_agent.py  knowledge_vault_agent.py  meta_memory_agent.py  procedural_memory_agent.py  reflexion_agent.py  resource_memory_agent.py  semantic_memory_agent.py  temporary_message_accumulator.py  vision.py
agents/client/: client.py
agents/database/: connection.py  create_hierarchy_tables.sql  create_secrets_table.sql  migrate_database_postgresql.sql  run_sqlite_migration.py  schema_extractor.py  timezone_migration.py  timezone_migration_postgresql.py  upgrade_schema_extensions.sql
agents/functions/: functions.py  helpers.py
agents/functions/function_sets/: base.py  (+1 more)
agents/helpers/: __init__.py  converters.py  datetime_helpers.py  message_helpers.py  tool_rule_solver.py
agents/llm_api/: anthropic.py  anthropic_client.py  aws_bedrock.py  azure_openai.py  azure_openai_client.py  cohere.py  cohere_client.py  google_ai.py  google_ai_client.py  helpers.py  llm_api_tools.py  llm_client.py  llm_client_base.py  mistral.py  openai.py  openai_client.py
agents/orm/: __all__.py  __init__.py  activity.py  agent.py  agents_tags.py  base.py  block.py  blocks_agents.py  cloud_file_mapping.py  custom_columns.py  day_summary.py  enums.py  episodic_memory.py  file.py  knowledge_vault.py  message.py  mixins.py  organization.py  procedural_memory.py  project.py  provider.py  resource_memory.py  sandbox_config.py  secret.py  semantic_memory.py  sqlalchemy_base.py  sqlite_functions.py  step.py  tool.py  tools_agents.py  user.py
agents/processors/: __init__.py  consolidator.py  frame_processor.py  ocr_worker.py  vision_worker.py
agents/prompts/: gpt_persona.py
agents/schemas/: agent.py  agents_base.py  agents_message.py  agents_message_content.py  agents_request.py  agents_response.py  block.py  cloud_file_mapping.py  environment_variables.py  episodic_memory.py  file.py  frame.py  knowledge_vault.py  llm_config.py  memory.py  message.py  organization.py  procedural_memory.py  providers.py  resource_memory.py  sandbox_config.py  semantic_memory.py  source.py  step.py  tool.py  tool_rule.py  usage.py  user.py
agents/server/: fastapi_server.py  memory_server.py  server.py
agents/services/: agent_manager.py  block_manager.py  cloud_file_mapping_manager.py  episodic_memory_manager.py  file_manager.py  knowledge_vault_manager.py  mcp_tool_registry.py  message_manager.py  organization_manager.py  procedural_memory_manager.py  provider_manager.py  resource_memory_manager.py  sandbox_config_manager.py  semantic_memory_manager.py  step_manager.py  tool_execution_sandbox.py  tool_manager.py  user_manager.py  utils.py
capture/: Cargo.toml  build_log.txt  rust_error.txt
capture/.cargo/: config.toml
capture/recall-capture/: Cargo.toml
capture/recall-capture/src/: capture.rs  dedup.rs  lib.rs  monitor.rs  pipeline.rs
capture/recall-capture/tests/: pipeline_integration.rs
capture/recall-db/: Cargo.toml
capture/recall-db/src/: db.rs  lib.rs
capture/recall-db/src/migrations/: 20251119000000_init.sql
capture/recall-db/tests/: db_connection.rs  db_integration.rs
capture/recall-store/: Cargo.toml
capture/recall-store/src/: images.rs  lib.rs  postgres.rs  traits.rs
capture/recall-store/tests/: store_integration.rs
capture/src/: frame_comparer.rs  lib.rs  monitor.rs  pipeline.rs
capture/tests/: pipeline_integration.rs
docs/: MasterDocumentationPlaybook.md  Northstar.md  README.md  TESTING_PHILOSOPHY.md  index.md  roadmap.md  secrets_management.md  standards.md
docs-legacy/: MasterDocumentationPlaybook.md  README.md  TESTING_PHILOSOPHY.md  index.md  testing.md  todo.md
docs-legacy/archive/: architectural-docs-discovery.md  direct-quotes-and-vision.md
docs-legacy/plans/: consolidation-2025-11.md
docs-legacy/scratchpad/: RUST_PATTERNS_REVIEW.txt  session-2025-11-25-refactor-plan.md
docs-legacy/storage/: st-overview.md
docs-legacy/testing/: TEST_PLAN.md
docs/architecture/: adr-001.md  adr-002.md  adr-003.md  adr-004.md  adr-005.md  adr-006.md  adr-008.md  adr-009.md  overview.md  roadmap.md  secrets_management.md
docs/archive/: code-inventory.md  ffi-bridge.md  foundational-principles.md  multi-agent-review.md  pr-review-agents.md  screenpipe-crate-audit.md  unified-vision.md
docs/capture/: cp-overview.md
docs/dev/: hooks-harness.md  logging.md  testing.md
docs/orchestration/: or-overview.md  or-routing.md
docs/plans/: implementation-roadmap.md  mirix-agent-patterns.md  schema-unification-plan.md
docs/session-logs/: 2025-11-29-session-0006.md  2025-11-29-session-0351.md  2025-11-29-session-0450.md
plans/: architecture-critique.md  documentation-cleanup-plan.md
scripts/: init_db.py  install_systemd_service.sh  install_windows_service.ps1
tests/: conftest.py  test_ocr_worker.py  test_schemas.py  test_vision_worker.py
tests/e2e/: test_full_pipeline.py
tests/integration/: conftest.py  test_ocr_pipeline.py  test_vision_pipeline.py
(+12 files in other folders)
