[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-pipeline"
version = "0.1.0"
description = "Cross-platform desktop recall pipeline"
authors = [{ name = "User" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "requests>=2.28",
    "asyncpg>=0.29.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "google-genai>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "demjson3>=3.0.0",
    "tiktoken>=0.7.0",
    "pathvalidate>=3.0.0",
    "numpy>=1.24.0",
    "pytz>=2023.3",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.0.0",
    "pyhumps>=3.0.0",
    "PyYAML>=6.0.0",
    "anyio>=4.0.0",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.1",
    "httpx-sse>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
recall-agents = "agents.__main__:main"

# =============================================================================
# Ruff - Python linter & formatter
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["agents", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["agents"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["agents*"]
exclude = ["capture*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
