[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recall-pipeline"
version = "0.1.0"
description = "Cross-platform desktop recall pipeline"
authors = [{ name = "User" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "requests>=2.28",
    "anthropic>=0.3.0",
    "pytesseract",
    "asyncpg",
    "pydantic",
    "Pillow",
    "tiktoken",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.scripts]
recall-agents = "agents.__main__:main"

# =============================================================================
# Ruff - Python linter & formatter
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["agents", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["agents"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["agents*"]
exclude = ["capture*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
