[package]
name = "recall"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = [
    "recall-capture",
    "recall-db",
    "recall-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Coldaine"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.25"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# Binary lives in workspace root
[[bin]]
name = "recall"
path = "src/bin/recall.rs"

[dependencies]
recall-capture = { path = "recall-capture" }
recall-db = { path = "recall-db" }
recall-store = { path = "recall-store" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
image = { workspace = true }
uuid = { workspace = true }
