[package]
name = "recall-capture"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Screen capture and frame deduplication for recall-pipeline"

[dependencies]
xcap = "0.8"
image = { workspace = true }
image-compare = "0.4"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
