[package]
name = "recall-db"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Postgres database layer for recall-pipeline"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
