[package]
name = "recall-store"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Storage trait, Postgres adapter, and image storage for recall-pipeline"

[dependencies]
recall-db = { path = "../recall-db" }
async-trait = "0.1"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tempfile = "3"
